--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,7 +2,15 @@
   --text-black: black;
   --text-white: white;
   --text-gray: #808080;
-  --text-blue: #128DFF;
+  --text-blue: #128dff;
+}
+
+.br-4 {
+  border-radius: 4px;
+}
+
+.border-1-white {
+  border: 1px solid #0000001A;
 }
 
 .text-black {
@@ -67,16 +75,43 @@
   color: #128dff;
 } */
 .col-md-5,
-.col-6 {
+.parent-box {
   box-shadow: 0px 11px 44px -10px #00000040;
   border-radius: 20px;
 }
 
-.col-6 div {
+input {
   border-radius: 5px;
-  border: 1px solid #0000001A;
+  border: 1px solid #0000001a;
+  width: 100%;
+  height: 100%;
+}
+
+input:focus-visible {
+  outline: none;
 }
 
 .box {
-  border: 1px solid #128DFF !important;
+  border: 1px solid #128dff !important;
+}
+
+#list-element ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  padding: 0;
+}
+
+#list-element ul li {
+  padding: 0 10px;
+}
+
+.clear-btn {
+  background: linear-gradient(97.42deg, #128dff -4.95%, #1444ef 109.04%);
+  border-radius: 4px;
+  padding: 13px 58px;
+  color: var(--text-white);
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
 }
