--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,7 +10,7 @@
 }
 
 .border-1-white {
-  border: 1px solid #0000001A;
+  border: 1px solid #0000001a;
 }
 
 .text-black {
@@ -114,4 +114,7 @@ input:focus-visible {
   font-size: 16px;
   font-weight: 600;
   border: none;
+}
+.w-19 {
+  width: 19%;
 }
