--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Rubik+Moonrocks&family=Splash&display=swap');
+
+.ff-monospace {
+  font-family: 'Inconsolata', monospace;
+}
+
+.ff-moonrocks {
+  font-family: 'Rubik Moonrocks', cursive;
+}
+
+.ff-splash {
+  font-family: 'Splash', cursive;
+}
+
 :root {
   --text-black: black;
   --text-white: white;
@@ -119,4 +133,35 @@ input:focus-visible {
 
 .w-19 {
   width: 19%;
+}
+
+.text {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+select {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 20px;
+  max-width: 100%;
+  min-width: 100%;
+  appearance: none;
+  background-image: url('./images/bx_chevron-down.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 97%;
+}
+
+.box-2 {
+  background: #FFFFFF;
+  box-shadow: 0px 11px 44px -10px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+}
+
+select:focus-visible {
+  outline: none;
 }
