--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,6 +33,10 @@
   color: var(--text-blue);
 }
 
+.bg-red {
+  background-color: red !important;
+}
+
 #add-one {
   color: rebeccapurple;
   background-color: aquamarine;
@@ -115,6 +119,27 @@ input:focus-visible {
   font-weight: 600;
   border: none;
 }
+
 .w-19 {
   width: 19%;
+}
+
+.accordian {
+  background: #FFFFFF;
+  box-shadow: 0px 11px 44px -10px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 24px 21px;
+}
+
+.parent,
+.parent-2,
+.parent-3,
+.parent-4 {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.blue-border {
+  border: 1px solid #128dff !important;
 }
