--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -125,7 +125,7 @@ input:focus-visible {
 }
 
 .accordian {
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 11px 44px -10px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   padding: 24px 21px;
@@ -142,4 +142,9 @@ input:focus-visible {
 
 .blue-border {
   border: 1px solid #128dff !important;
+}
+.active {
+  padding: 5px;
+  background-color: #20bf55 !important;
+  color: white;
 }
